--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -9,7 +9,7 @@
   <title>De Man met de Hamer</title>
   <link rel="icon" type="image/x-icon" href="./public/images/favicon.ico">
   <link rel="stylesheet" href="/index.css">
-  <script src="/index.js" defer></script>
+  <script type="module" src="/index.js" defer></script>
   {% block styles %}{% endblock %}
   {% block scripts %}{% endblock %}
 </head>
