--- a/client/homepage-responsiveness/hp-responsiveness.css
+++ b/client/homepage-responsiveness/hp-responsiveness.css
@@ -195,6 +195,20 @@ img {
     width: 1px;
 }
 
+.nav-text {
+    position: absolute;
+    font-family: system-ui;
+    color: white;
+    font-weight: 800;
+    white-space: nowrap;
+    font-size: 3rem;
+    opacity: 0;
+    scale: 0.6;
+    transition: all 0.3s ease;
+    filter: drop-shadow(0 4px 10px #000);
+    pointer-events: none;
+}
+
 
 /* -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
 /* SET UP */
@@ -202,6 +216,7 @@ img {
 
 body {
     overflow: hidden;
+    scale: 1.01; /* <-- TEMPORARY FIX */
 }
 
 .frame {
@@ -342,24 +357,13 @@ body {
     z-index: 100;
 }
 
-.frame .prop-container h2 {
-    position: absolute;
+.frame .prop-container .nav-text {
     top: 100px;
     left: -50px;
-    font-family: system-ui;
-    color: white;
-    font-weight: 800;
     text-align: right;
-    white-space: nowrap;
-    font-size: 3rem;
-    opacity: 0;
-    scale: 0.6;
-    transition: all 0.3s ease;
-    filter: drop-shadow(0 4px 10px #000);
-    pointer-events: none;
 }
 
-.frame .prop-container:hover h2 {
+.frame .prop-container:hover .nav-text {
     top: 20px;
     opacity: 1;
     scale: 1;
@@ -384,6 +388,64 @@ body {
     translate: -32.5% -50%;
     height: 160px;
 }
+
+
+/* LOGO */
+.frame .logo-container {
+    top: 0;
+    left: 300px;
+    z-index: 100;
+    height: 600px;
+    width: 200px;
+}
+
+.frame .logo-container .hanging-sign {
+    height: 100%;
+    width: 100%;
+}
+
+.frame .hanging-sign:hover {
+    filter: url("#border-text");
+}
+
+.frame .logo-container .hanging-sign .logo {
+    position: absolute;
+    width: 100%;
+    z-index: 2;
+    bottom: 0;
+    left: 0;
+}
+
+.frame .logo-container .hanging-sign .cable {
+    position: absolute;
+    z-index: 2;
+    width: 2px;
+    height: 80%;
+    background: linear-gradient(90deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 50%, rgba(176, 176, 176, 1) 100%);
+}
+
+.frame .logo-container .hanging-sign .cable:nth-of-type(1) {
+    left: 20%;
+}
+
+.frame .logo-container .hanging-sign .cable:nth-of-type(2) {
+    left: 80%;
+}
+
+.frame .logo-container .nav-text {
+    bottom: 20%;
+    right: 0;
+    text-align: left;
+}
+
+.frame .logo-container:hover .nav-text {
+    bottom: 12%;
+    right: -180px;
+    opacity: 1;
+    scale: 1;
+}
+
+
 
 
 
