--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -10,7 +10,7 @@
 
  <div class="curtain-left"></div>
  <div class="curtain-right"></div> 
-
+<div class="curtain-light"></div>
 <div class="peter-container">
     <img class="forehead" src="/public/images/pre-loader/peter-top.png" alt="peter's voorhoofd">
     <img class="bottomhead" src="/public/images/pre-loader/peter-bottom.png" alt="peter's onderhoofd">
@@ -23,8 +23,7 @@
         <img class="eye-yellow" src="/public/images/pre-loader/peter-oog-geel.png" alt="peter's iris uitgeknipt">
         <img class="eye-white" src="/public/images/pre-loader/peter-oog-wit.png" alt="peter's oog wit uitgeknipt">
     </div>
-    
-     <button id="playSoundButton">SITE BETREDEN</button>
-    <audio id="myAudio" src="welkom.mp3"></audio>
 </div>
+    <button id="enterSite">SITE BETREDEN</button>
+    <audio id="peterAudio" src="/public/images/pre-loader/welkom.mp3"></audio>
 {% endblock %}
