--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -1,15 +1,16 @@
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block head %}
-    <title>{{ title }}</title>
+  <title>{{ title }}</title>
   {% endblock %}
 
   <title>De Man met de Hamer</title>
   <link rel="icon" type="image/x-icon" href="./public/images/favicon.ico">
   <link rel="stylesheet" href="/index.css">
-  <script src="/index.js" defer></script>
+  <script type="module" src="/index.js" defer></script>
   {% block styles %}{% endblock %}
   {% block scripts %}{% endblock %}
 </head>
@@ -22,7 +23,8 @@
     {% block content %}{% endblock %}
   </main>
   <footer>
-       <p>de man met de code productions</p>
-    </footer>
+    <p>de man met de code productions</p>
+  </footer>
 </body>
+
 </html>
