changed scroll trigger to div

--- a/client/index.css
+++ b/client/index.css
@@ -19,3 +19,4 @@
 @import "../server/components/project-item/project-item.css";
 @import "../server/components/text-slider/text-slider.css";
 @import "../server/components/break-glass/break-glass.css";
+@import "../server/components/submarine/submarine.css";
