--- a/server/components/submarine/submarine.css
+++ b/server/components/submarine/submarine.css
@@ -4,13 +4,26 @@
   width: 140dvw;
   display: flex;
   justify-content: center;
+  z-index: 9999999 !important;
+  overflow-x: hidden;
 }
+
 .submarine-container {
   position: fixed;
   width: 20vw;
   max-width: 400px;
   aspect-ratio: 1;
   pointer-events: none;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.submarine-container img {
+  width: 400px;
+  aspect-ratio: 1;
+  object-fit: contain;
 }
 
 .submarine {
@@ -25,7 +38,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: -1;
+  z-index: 9999999 !important;
 }
 
 .bubble {
