--- a/server/views/index.css
+++ b/server/views/index.css
@@ -1,103 +1,153 @@
 /* curtains */
-body{
---curtain-pattern: repeating-linear-gradient(90deg,
-#7a0000 0, 
-#c10000 20px,
-#ff0000 40px,
-#910000 60px,
-#3D0000 80px,
-#5a0000 112px,
-#7a0000 120px,
-#c10000 124px,
-#c10000 132px,
-#7a0000 140px, 
-#9b0000 164px,
-#c10000 175px,
-#c10000 180px,
-#c10000 200px,
-#9a0000 212px,
-#7a0000 220px );
-    --custom-easing:cubic-bezier(0.140, 0.935, 0.240, 0.940);
+body {
+    overflow: hidden;
+    --curtain-pattern: repeating-linear-gradient(90deg,
+            #5a0000 0,
+            #a00000 30px,
+            #cc0000 40px,
+            #720000 60px,
+            #2d0000 80px,
+            #420000 112px,
+            #5a0000 120px,
+            #a00000 124px,
+            #a00000 132px,
+            #5a0000 140px,
+            #7b0000 164px,
+            #a00000 175px,
+            #a00000 180px,
+            #a00000 200px,
+            #7a0000 205px,
+            #5a0000 220px);
+    --custom-easing: cubic-bezier(0.140, 0.935, 0.240, 0.940);
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height:100vh;
-    
+    height: 100vh;
+
     justify-content: center;
     align-items: center;
-    
-    background-color:black;
-}
-.curtain-left {
-position: absolute;
-left:0;
-background-image: var(--curtain-pattern);
-box-shadow: inset -10px 0 20px rgba(0,0,0,0.5);
-width:50vw;
-height:100vh;
-z-index: 3;
-animation: curtain-left-open 2s var(--custom-easing) forwards 2s;
 
-filter: brightness(1.05) contrast(1.25) saturate(1.1);
+
+    background-color: black;
+}
+
+.curtain-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: var(--curtain-pattern);
+    box-shadow: inset -10px 0 20px rgba(0, 0, 0, 0.5);
+    width: 49vw;
+    height: 200vh;
+    z-index: 3;
+    clip-path: polygon(0% 100%,
+            0% 0%,
+            100% 0%,
+            100% 50%,
+            98% 57%,
+            97% 63%,
+            95% 68%,
+            93% 74%,
+            91% 79%,
+            88% 83%,
+            86% 86%,
+            84% 89%,
+            81% 94%,
+            77% 96%,
+            72% 99%,
+            50% 100%);
 }
 
 .curtain-right {
-position: absolute;
-right:0;
-background-image: var(--curtain-pattern);
-width:50vw;
-height:100vh;
-z-index: 3;
-animation: 
-    curtain-right-open 2s var(--custom-easing) forwards 2s;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-image: var(--curtain-pattern);
+    width: 49vw;
+    height: 200vh;
+    z-index: 3;
+    clip-path: polygon(100% 100%,
+            100% 0%,
+            0% 0%, 0% 50%,
+            2% 57%,
+            3% 63%,
+            5% 68%,
+            7% 74%,
+            9% 79%,
+            12% 83%,
+            14% 86%,
+            16% 89%,
+            19% 94%,
+            23% 96%,
+            28% 99%,
+            50% 100%);
+
+}
+.curtain-right-animation {
+    animation: curtain-right-open 2s var(--custom-easing) forwards;
+    }
+
+.curtain-left-animation{
+    animation: curtain-left-open 2s var(--custom-easing) forwards;
 }
 
 @keyframes curtain-left-open {
-0% {
-    transform: translateX(0vw);
-}
-100% {
-    transform: translateX(-50vw);
-}
+    0% {
+        transform: translate(0vw, 0vh);
+    }
+
+    100% {
+        transform: translate(-50vw, -100vh);
+    }
 }
 
 @keyframes curtain-right-open {
-0% {
-    transform: translateX(0vw);
-}
-100% {
-    transform: translateX(50vw);
-}
+    0% {
+        transform: translate(0vw, 0vh);
+    }
+
+    100% {
+        transform: translate(50vw, -100vh);
+    }
 }
 
 /* peter pannekoek preloader */
 
-.peter-container{
+.peter-container {
     position: relative;
-    width: 40vmin; /* scales with screen size */
-    aspect-ratio: 1 / 1.4; /* tweak this to match your head's shape */
+    width: 40vmin;
+    /* scales with screen size */
+    aspect-ratio: 1 / 1.4;
+    /* tweak this to match your head's shape */
     opacity: 0;
-    animation: fadein 1s ease-out 2s forwards;
-    
     transform: scale(0.4);
 }
 
-.peter-container *, .eye-white, .eye-yellow{
+.peter-animation {
+    animation: fade-in 1s ease-out 1s forwards;
+}
+
+.peter-container *,
+.eye-white,
+.eye-yellow {
     position: absolute;
 }
 
 .forehead {
-    width:100%;
-    top:0;
-    z-index:2;
-}
-.bottomhead {
-    width: 64%;
-    bottom:4.5%;
-    left:14.5%;
+    width: 100%;
+    top: 0;
+    z-index: 2;
 }
 
-.peter-eye-left, .peter-eye-right {
+.bottomhead {
+    width: 64%;
+    bottom: 4.5%;
+    left: 14.5%;
+}
+
+.peter-eye-left,
+.peter-eye-right {
     width: 20%;
     height: 5%;
     /* background-color: yellow; */
@@ -108,42 +158,52 @@ animation:
     left: 25%;
     /* transform: scaleX(-1); */
 }
+
 .peter-eye-right {
     right: 25%;
 }
 
-.eye-white{
+.eye-white {
     width: 100%;
-    z-index:0;
-} 
+    z-index: 0;
+}
 
-.eye-yellow{
-    right:30%;
-    width:35%;
-    z-index:1;
+.eye-yellow {
+    right: 30%;
+    width: 35%;
+    z-index: 1;
 }
 
 .peter-eye-left img:last-child,
-.peter-eye-right img:last-child{
-height:100%;
+.peter-eye-right img:last-child {
+    height: 100%;
 }
 
-@keyframes fadein {
-  to {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-@keyframes curtain-flutter {
-  from { background-position: 0 0; }
-  to { background-position: 5px 0; }
+@keyframes fade-in {
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 .curtain-light {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background: radial-gradient(circle at center, rgba(255,255,255,0.05), transparent 70%);
-  z-index: 2;
-  pointer-events: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background: radial-gradient(circle at center, rgba(255, 255, 255, 0.05), transparent 70%);
+    z-index: 2;
+    pointer-events: none;
+}
+
+#enterSite {
+    z-index:5;
+    background-color:#ff0000;
+    color:white;
+    border-radius:.25rem;
+    border:none;
+    padding: 1rem 2rem;
+}
+
+#enterSite:hover{
+    background-color:darkred;
 }
