--- a/client/homepage-responsiveness/hp-responsiveness.css
+++ b/client/homepage-responsiveness/hp-responsiveness.css
@@ -199,6 +199,12 @@ img {
     width: 1px;
 }
 
+
+/* -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
+/* GENERAL CLASSES */
+/* -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
+
+/* -=-=-=-=-=-=-=-=-=- TEXT -=-=-=-=-=-=-=-=-=- */
 .nav-text {
     position: absolute;
     font-family: system-ui;
@@ -213,6 +219,51 @@ img {
     pointer-events: none;
 }
 
+/* -=-=-=-=-=-=-=-=-=- PULSE -=-=-=-=-=-=-=-=-=- */
+.pulse {
+    position: absolute;
+    height: 1.25rem;
+    aspect-ratio: 1;
+    background-color: rgba(255, 255, 255, 0.75);
+    border-radius: 50%;
+    transition: opacity .33s ease;
+}
+
+.pulse::before {
+    position: absolute;
+    content: '';
+    height: 150%;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    outline: 1.5px white solid;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    animation: pulsing-animation .66s ease-out infinite;
+    opacity: .5;
+}
+
+@keyframes pulsing-animation {
+    0% {
+        scale: 1;
+        opacity: 1;
+    }
+    100% {
+        scale: 2;
+        opacity: 0;
+    }
+}
+
+.logo-container:has(:hover) .pulse {
+    opacity: 0;
+}
+
+.prop-container:has(:hover) .pulse {
+    opacity: 0;
+}
+
+
+
 
 /* -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
 /* SET UP */
@@ -221,7 +272,7 @@ img {
 body {
     overflow: hidden;
     scale: 1.01;
-    /* <-- TEMPORARY FIX */
+    /* ^^^^ TEMPORARY FIX */
 }
 
 .frame {
@@ -256,7 +307,7 @@ body {
     height: 370px;
 }
 
-/* BOTTOM LEFT */
+/* -=-=-=-=-=-=-=-=-=- BOTTOM LEFT -=-=-=-=-=-=-=-=-=- */
 .frame .bottom-left {
     bottom: 0;
     left: 0;
@@ -264,7 +315,7 @@ body {
     height: 230px;
 }
 
-/* LEFT WALL */
+/* -=-=-=-=-=-=-=-=-=- LEFT WALL -=-=-=-=-=-=-=-=-=- */
 .frame .repeating-wall-left {
     top: 0;
     left: 0;
@@ -276,7 +327,7 @@ body {
     width: 155px;
 }
 
-/* TOP RIGHT */
+/* -=-=-=-=-=-=-=-=-=- TOP RIGHT -=-=-=-=-=-=-=-=-=- */
 .frame .top-right {
     top: 0;
     right: 0;
@@ -284,7 +335,7 @@ body {
     height: 355px;
 }
 
-/* BOTTOM RIGHT */
+/* -=-=-=-=-=-=-=-=-=- BOTTOM RIGHT -=-=-=-=-=-=-=-=-=- */
 .frame .bottom-right {
     bottom: 0;
     right: 0;
@@ -292,7 +343,7 @@ body {
     height: 240px;
 }
 
-/* RIGHT WALL */
+/* -=-=-=-=-=-=-=-=-=- RIGHT WALL -=-=-=-=-=-=-=-=-=- */
 .frame .repeating-wall-right {
     top: 0;
     right: 0;
@@ -304,7 +355,7 @@ body {
     width: 155px;
 }
 
-/* CAGE */
+/* -=-=-=-=-=-=-=-=-=- CAGE -=-=-=-=-=-=-=-=-=- */
 .frame .repeating-cage {
     top: 80px;
     left: 0;
@@ -313,23 +364,23 @@ body {
     width: 100%;
     background-image: url(/public/images/images-responsiveness/repeating-cage.png);
     background-repeat: repeat-x;
-    background-position: -20% 0;
+    background-position: -100% 0;
     background-size: 1150px;
 }
 
-/* ROOF */
+/* -=-=-=-=-=-=-=-=-=- ROOF -=-=-=-=-=-=-=-=-=- */
 .frame .repeating-roof {
     top: 0;
     left: 0;
     z-index: 1;
     background-image: url(/public/images/images-responsiveness/repeating-roof.png);
     background-repeat: repeat-x;
-    background-position: 20% 0;
+    background-position: 100% 0;
     width: 100%;
     height: 105px;
 }
 
-/* AUDIENCE */
+/* -=-=-=-=-=-=-=-=-=- AUDIENCE -=-=-=-=-=-=-=-=-=- */
 .frame .audience {
     min-width: 100vw;
     height: 80%;
@@ -339,10 +390,13 @@ body {
 
 .frame .audience img {
     height: 90%;
+    max-width: 100%;
     margin-inline: auto;
+    object-fit: cover;
+    object-position: center;
 }
 
-/* FLOOR */
+/* -=-=-=-=-=-=-=-=-=- FLOOR -=-=-=-=-=-=-=-=-=- */
 .frame .repeating-floor {
     bottom: 0;
     left: 0;
@@ -353,34 +407,30 @@ body {
     height: 80px;
 }
 
-/* PROPS */
+/* -=-=-=-=-=-=-=-=-=- PROPS -=-=-=-=-=-=-=-=-=- */
 .frame .prop-container {
     position: absolute;
     bottom: 10px;
-    right: 22%;
-    height: 400px;
+    right: 100px;
     z-index: 100;
 }
 
 .frame .prop-container .nav-text {
-    top: 100px;
-    left: -50px;
+    top: 20%;
+    left: 40%;
     text-align: right;
 }
 
 .frame .prop-container:hover .nav-text {
-    top: 20px;
+    top: 10%;
     opacity: 1;
     scale: 1;
-    left: -180px;
+    left: 30%;
+    translate: -50%;
 }
 
 .frame .prop-container .props {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    height: 400px;
+    /* niks */
 }
 
 .frame .prop-container .props:hover {
@@ -389,13 +439,17 @@ body {
 
 .frame .prop-container .prop-shadows {
     position: absolute;
-    top: 89%;
-    translate: -32.5% -50%;
-    height: 160px;
+    bottom: -40px;
+    right: -220px;
+}
+
+.frame .prop-container .pulse {
+    top: 20%;
+    left: 40%;
 }
 
 
-/* LOGO */
+/* -=-=-=-=-=-=-=-=-=- LOGO -=-=-=-=-=-=-=-=-=- */
 .frame .logo-container {
     top: 0;
     left: 300px;
@@ -423,14 +477,15 @@ body {
 
 .frame .logo-container .hanging-sign .logo .gradient {
     position: absolute;
-    --gradient-position: 100%;
+
     background: linear-gradient(145deg,
             rgba(0, 0, 0, 0) 45%,
-            rgba(255, 255, 255, 1) 47.5%,
-            rgba(255, 255, 255, 1) 52.5%,
+            rgba(255, 255, 255, 1) 45%,
+            rgba(255, 255, 255, 1) 55%,
             rgba(0, 0, 0, 0) 55%);
     background-size: 400%;
     background-position: var(--gradient-position);
+    animation: gradient-animation 5s ease infinite;
 
     mask: url('/public/images/images-responsiveness/hanging-logo.png');
     mask-position: center;
@@ -445,9 +500,14 @@ body {
     mix-blend-mode: overlay;
 }
 
-.frame .logo-container .hanging-sign .logo .gradient:hover {
-    --gradient-position: 0%;
-    transition: --gradient-position 2s ease;
+@keyframes gradient-animation {
+    0% {
+        --gradient-position: 0%;
+    }
+
+    30% {
+        --gradient-position: 100%;
+    }
 }
 
 
@@ -484,7 +544,11 @@ body {
     scale: 1;
 }
 
-
+.frame .logo-container .pulse {
+    bottom: 40%;
+    left: 50%;
+    translate: -50% -50%;
+}
 
 
 
