--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -7,24 +7,5 @@
   {% comment %} <a href="/projects">
     <h2>Naar projecten</h2>
   </a> {% endcomment %}
-<button id="enterSite">SITE BETREDEN</button>
- <div class="curtain-left"></div>
- <div class="curtain-right"></div> 
-<div class="curtain-light"></div>
-<div class="peter-container">
-    <img class="forehead" src="/public/images/pre-loader/peter-top.png" alt="peter's voorhoofd">
-    <img class="bottomhead" src="/public/images/pre-loader/peter-bottom.png" alt="peter's onderhoofd">
-    <div class="peter-eye-left">
-        <img class="eye-yellow" src="/public/images/pre-loader/peter-oog-geel.png" alt="peter's iris uitgeknipt">
-        <img class="eye-white" src="/public/images/pre-loader/peter-oog-wit.png" alt="peter's oog wit uitgeknipt">
-        
-    </div>
-    <div class="peter-eye-right">
-        <img class="eye-yellow" src="/public/images/pre-loader/peter-oog-geel.png" alt="peter's iris uitgeknipt">
-        <img class="eye-white" src="/public/images/pre-loader/peter-oog-wit.png" alt="peter's oog wit uitgeknipt">
-    </div>
-</div>
-
-    
-    <audio id="peterAudio" src="/public/images/pre-loader/welkom.mp3"></audio>
+{%  render 'server/components/preloader/preload.liquid' %}
 {% endblock %}
